--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: CatSpace Математический
 description: >- # this means to ignore newlines until "baseurl:"
   Здесь будут статьи о математике, которые пишут желающие из нашего небольшого лампового сообщества CatSpace
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/math" # the subpath of your site, e.g. /blog
+url: "catspace-dev.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
